test/syntax/fail/not_call_in_every.sync
let node f =
  0 every true
